--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li><a href="#home">Accueil</a></li>
 			<li><a href="#about">A Propos De Nous</a></li>
 			<li><a href="#team">Equipe</a></li>
-			<li><a href="#">Actualités</a></li>
+			<li><a href="#news">Actualités</a></li>
 		</ul>
 	</nav>
 	<section class="parallax" id="home">
@@ -139,7 +139,7 @@
 		</div>
 	  </div>
 	</div>
-	<h1 style="font-size :40px;text-align:center;padding-bottom: 50px;" id="team">Actualités</h1>
+	<h1 style="font-size :40px;text-align:center;padding-bottom: 50px;" id="news">Actualités</h1>
 
 <div class="slideshow-container">
 
